Bug 693664 - Underline and strikethrough annotations without an appearance stream not displayed properly
Summary: Underline and strikethrough annotations without an appearance stream not disp...
Status: RESOLVED FIXED
Alias: None
Product: MuPDF
Classification: Unclassified
Component: fitz (show other bugs)
Version: master
Hardware: PC Linux
: P4 normal
Assignee: Tor Andersson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-26 18:59 UTC by James Cloos
Modified: 2013-03-19 12:38 UTC (History)
1 user (show)

See Also:
Customer:
Word Size: ---


Attachments
pdf with underline and strikethrough annotations but without appearance streams (2.57 MB, application/pdf)
2013-02-26 18:59 UTC, James Cloos
Details

Note You need to log in before you can comment on or make changes to this bug.
Description James Cloos 2013-02-26 18:59:19 UTC
Created attachment 9327 [details]
pdf with underline and strikethrough annotations but without appearance streams

The attached pdf was reported to poppler, as it also has this bug.

GS (9.06 and master) renders this as intended.

Quoting from the poppler report,

“The attached AnnotationTest.pdf has underline and strikethrough annotations
that are not displayed in” mupdf.

“These annotations do not have an appearance stream. [The original reporter’s] understanding of the PDF
spec (section 8.4.5,  "Markup Annotations") is that the annotation should be
positionned based on the QuadPoints specification when no appearance stream is
present.”

Interestingly, the original reports writes that Sumatra gets this right.  Mupdf master, however, does not.

The poppler bug report is at:

  https://bugs.freedesktop.org/show_bug.cgi?id=61518
Comment 1 Paul Gardiner 2013-03-19 12:38:41 UTC
Fixed by:
Author: Paul Gardiner <paulg.artifex@glidos.net>
Date:   Mon Mar 18 10:59:43 2013 +0000

    Auto-generate appearance streams for strikeout, underline, highlight

    This fixes bug #693664, and also simplifies app code.

    The example file attached to the bug produces strange results, but that
    is because the QuadPoint information is incorrect.