Auto-generate appearance streams for strikeout, underline, highlight

This fixes bug #693664, and also simplifies app code.

The example file attached to the bug produces strange results, but that
is because the QuadPoint information is incorrect.